# TCP_Clinet

./: CMakeLists.txt  main.cpp
headers/: AS3_Protocol.hpp  BA5_Protocol.hpp  IntercomAppProtocol.hpp  LV_Protocol.hpp  ScalesProtocol.hpp  TCP_Client.hpp  TestProtocol.hpp
headers/interfaces/: AbstractProtocol.hpp
src/: AS3_Protocol.cpp  BA5_Protocol.cpp  IntercomAppProtocol.cpp  LV_Protocol.cpp  ScalesProtocol.cpp  TCP_Client.cpp  TestProtocol.cpp
tpp/: AbstractProtocol.tpp
